# StartPanel-ESP32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  serial_auto.h
main/: CMakeLists.txt  main.c  serial_auto.h
